<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
    
    <TableLayout
    	android:id="@+id/tl_cimsor"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:layout_alignParentTop="true"
    	android:stretchColumns="*">
 
    	<TableRow
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
 
    	    <TextView
    	        style="@style/feher_35"
    	        android:id="@+id/tv_datum"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/datum"/>
    	    
    	    <TextView
    	        style="@style/feher_35"
			    android:id="@+id/tv_nettoar"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/nettoar"/>
        	
        	<TextView
        	    style="@style/feher_35"
			    android:id="@+id/tv_bruttoar"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/bruttoar"/>
    	    
    	    <TextView
    	        style="@style/feher_35"
    	        android:id="@+id/tv_mennyiseg"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/mennyiseg"/>
    	    
    	</TableRow>
    </TableLayout>
    
	<LinearLayout
	    android:layout_below="@id/tl_cimsor"
		android:layout_alignParentBottom="true"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	
	    <ListView
            android:id="@+id/lista_reszletek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	
	</LinearLayout>

</RelativeLayout>